--- a/Backend/package.json
+++ b/Backend/package.json
@@ -14,6 +14,7 @@
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.17",
+    "@types/jsonwebtoken": "^9.0.2",
     "nodemon": "^2.0.22"
   },
   "dependencies": {
@@ -21,6 +22,7 @@
     "colors": "^1.4.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.2.0",
     "ts-node": "^10.9.1"
   }
